@@ -21,7 +21,6 @@ Important Groups:
 
 	* String manipulation
 	      1 g_filename_from_utf8	[LIMITATION: UTF8 only today]
-	      1 g_strescape
 	
 	* Miscelaneous
 	      3 g_spaced_primes_closest
